--- a/XYZReader/src/main/res/values/strings.xml
+++ b/XYZReader/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="title">Title:\u0020\u0020</string>
     <string name="author">Author:\u0020\u0020</string>
 
+    <string name="article_image">Article Image</string>
+
 </resources>
