--- a/XYZReader/src/main/res/values/strings.xml
+++ b/XYZReader/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="article_image">Article Image</string>
     <string name="article_thumbnail_image">article_thumbnail_image</string>
 
-    <string name="previous">Continue Reading...</string>
+    <string name="continue_reading">Continue Reading...</string>
     <string name="transition_photo">transition_photo</string>
 
 
